# consolidate

./: Cargo.toml  LICENSE  README.md
src/: main.rs  prelude.rs
src/util/: args.rs  globbing.rs  mod.rs  renaming.rs
